fix 1px gap

--- a/packages/public-client/src/app/components/pages/home/home.component.scss
+++ b/packages/public-client/src/app/components/pages/home/home.component.scss
@@ -239,7 +239,7 @@ $headerColor: utility.$dive-gray-dk3;
           display: flex;
           height: $waveSize;
           width: 100%;
-          margin-top: -($waveSize - 0.01vw);
+          margin-top: -($waveSize - 0.02vw);
           background-image: url('/assets/images/wave.svg');
           // > div {
           //   position: relative;
